test: LottoGame 테스트 다시 작성